--- a/index.html
+++ b/index.html
@@ -4,5 +4,15 @@
 	</head>
 	<body>
 		<h1>Hello World!</h1>
+	<ol>
+		<li>First item </li>
+		<li>Second item </li>
+	</ol>
+	<ul>
+		<li>First Item</li>
+		<li>Second item </li>
+	</ul>
+
 	</body>
+
 </html>
