My African Adventures - added images

--- a/index.html
+++ b/index.html
@@ -1,26 +1,37 @@
 <html>
+
 	<head>
-		<title>My First Website</title>
+		<title>
+		My African Adventures
+			<!-- title of the page goes here -->
+		</title>
 	</head>
+
 	<body>
-		<h1>Hello World!</h1>
-	<ol>
-		<li>First item </li>
-		<li>Second item </li>
-	</ol>
-	<ul>
-		<li>First Item</li>
-		<li>Second item </li>
-	</ul>
-	<!--this code will not show up in the actual body of the website-->
-	<!-- this is a shortcut to use for comments (command + forward slash) -->
-
-	<p>
-
-It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy. Various versions have evolved over the years, sometimes by accident, sometimes on purpose (injected humour and the like).
+	<h1>My African Adventure</h1>
+	<h2>Capetown - South Africa</h2>
+	<img src="images/capetown.jpg">
+	<p>Capetown was amazing!
+	<p>Rating 4 (out of 5)
 	</p>
-
-	<img src="http://placekitten.com/g/200/300">
+	<p>
+	<h2>Victoria Falls - Zimbabwe</h2>
+	<img src="images/victoriafalls.jpg">
+	<p>Zimbabwe was great! We saw an amazing waterfall
+	<p>
+	Rating 5 (out of 5)</p>
+	<p>
+	<h2>Sand Dunes - Namibia</h2>
+	<img src="images/sand-dunes.jpg">
+	<p>Loved the sand dunes in Namibia!
+	<p>
+	Rating 4 (out of 5)</p>
+	<p>
+	<h2>Morocco Beach - Morroco</h2>
+	<img src="images/morocco-beach.jpg">
+	<p>The beaches of Morroco were so relaxing
+	<p>
+	Rating 1 (out of 5)</p>
 
 	</body>
 
