--- a/index.html
+++ b/index.html
@@ -8,30 +8,36 @@
 	</head>
 
 	<body>
-	<h1>My African Adventure</h1>
-	<h2>Capetown - South Africa</h2>
-	<img src="images/capetown.jpg">
-	<p>Capetown was amazing!
-	<p>Rating 4 (out of 5)
-	</p>
-	<p>
-	<h2>Victoria Falls - Zimbabwe</h2>
-	<img src="images/victoriafalls.jpg">
-	<p>Zimbabwe was great! We saw an amazing waterfall
-	<p>
-	Rating 5 (out of 5)</p>
-	<p>
-	<h2>Sand Dunes - Namibia</h2>
-	<img src="images/sand-dunes.jpg">
-	<p>Loved the sand dunes in Namibia!
-	<p>
-	Rating 4 (out of 5)</p>
-	<p>
-	<h2>Morocco Beach - Morroco</h2>
-	<img src="images/morocco-beach.jpg">
-	<p>The beaches of Morroco were so relaxing
-	<p>
-	Rating 1 (out of 5)</p>
+	
+		<h1>My African Adventure</h1>
+		
+		<div>
+			<h2>Capetown - South Africa</h2>
+			<img src="images/capetown.jpg">
+			<p>Capetown was amazing!</p>
+			<p>Rating 4 (out of 5)</p>
+		</div>
+		
+		<div>
+			<h2>Victoria Falls - Zimbabwe</h2>
+			<img src="images/victoriafalls.jpg">
+			<p>Zimbabwe was great! We saw an amazing waterfall</p>
+			<p>Rating 5 (out of 5)</p>
+		</div>
+		
+		<div>
+			<h2>Sand Dunes - Namibia</h2>
+			<img src="images/sand-dunes.jpg">
+			<p>Loved the sand dunes in Namibia!</p>
+			<p>Rating 4 (out of 5)</p>
+		</div>
+
+		<div>
+			<h2>Morocco Beach - Morroco</h2>
+			<img src="images/morocco-beach.jpg">
+			<p>The beaches of Morroco were so relaxing</p>
+			<p>Rating 1 (out of 5)</p>
+		</div>
 
 	</body>
 
