--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
-	<head>spirit dunkin</title>
+	<head>
+
+	<title>spirit dunkin</title>
 		
 		<!-- external CSS link -->
 		<link rel="stylesheet" href="css/reset.css">
@@ -21,10 +23,10 @@
 			</div>
 
 			<div class="main_content">
-				<h2>ABOUT</h2>
+				<h2 class="underlined">ABOUT</h2>
 				<p>spirit has been working in the following industry for 20 years. She began blah blah</p>
 
-				<h2>PHOTOS</h2>
+				<h2 class="underlined">PHOTOS</h2>
 					<img src="..images/sunflowers.jpg">
 					<img src="..images/water.jpg">
 					<img src="..images/purple.jpg">
