--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -10,7 +10,7 @@
 
 	</head>
 	<body>
-		<div class=container>
+		<div class="container">
 
 			<div class="header">
 				<h1>spirit dunkin</h1>
@@ -27,9 +27,9 @@
 				<p>spirit has been working in the following industry for 20 years. She began blah blah</p>
 
 				<h2 class="underlined">PHOTOS</h2>
-					<img src="..images/sunflowers.jpg">
-					<img src="..images/water.jpg">
-					<img src="..images/purple.jpg">
+					<img src="...images/sunflowers.jpg">
+					<img src="...images/water.jpg">
+					<img src="...images/purple.jpg">
 					<img src="..images/ocean.jpg">
 			</div>
 
