--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -19,22 +19,24 @@
 
 
 			<div class="main_image">
-				<img src="..images/orchids.jpg">
+				<img src="images/orchids.jpg">
 			</div>
 
-			<div class="main_content">
+			<div class="main_copy">
 				<h2 class="underlined">ABOUT</h2>
-				<p>spirit has been working in the following industry for 20 years. She began blah blah</p>
+				<p class= "text">spirit has been working in the following industry for 20 years. She began blah blah</p>
 
 				<h2 class="underlined">PHOTOS</h2>
-					<img src="...images/sunflowers.jpg">
-					<img src="...images/water.jpg">
-					<img src="...images/purple.jpg">
-					<img src="..images/ocean.jpg">
+				
+			<div class="photos">
+				<img src="images/sunflowers.jpg" class="small_img">
+				<img src="images/water.jpg" class="small_img">
+				<img src="images/purple.jpg" class="small_img">
+				<img src="images/ocean.jpg" class="small_img">
 			</div>
 
 			<div class="bottom_bar">
-				<p>spirit dunkin</p>
+				<p>spirit dunkin &copy; 2015</p>
 				
 			</div>
 
